# fishery-news

./: .env.example  .gitignore  README.md  newsletter.md  pyproject.toml  regenerate.py  run_first_test.py
.github/workflows/: weekly.yml
config/: prompts.yaml  settings.yaml  sources.yaml
site/: archive.html  index.html
site/issue-2026-W26/: index.html
src/: __init__.py  agent.py  config.py  llm_client.py  main.py
src/collectors/: __init__.py  api_client.py  base.py  jina.py  og_image.py  openalex.py  rss.py  scraper.py
src/outputs/: __init__.py  markdown.py  notion.py  site.py  wechat.py
src/processors/: __init__.py  classifier.py  cluster.py  dedup.py  embedder.py  insights.py  prefilter.py  summarizer.py  tagger.py
src/storage/: __init__.py  db.py  models.py  vector.py
templates/: index.html.j2  weekly.md.j2
